[package]
name = "dialog_clicker"
version = "0.3.0" # Version bumped for new features
edition = "2021"
authors = ["hvaren"]
description = "Bind clicking dialog to keybinds and create custom ones!"

[lib]
crate-type = ["cdylib"]

[dependencies]
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
winapi = { version = "0.3", features = ["winuser"] }